# addrust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  TODO.md
data/: golden.csv  test_addresses.txt  usps-street-suffix.csv
data-raw/: usps-street-suffix.csv
data/defaults/: steps.toml  suffixes.toml  tables.toml
docs/decisions/: 2026-03-09-rule-detail-view-impl.md  2026-03-09-standardization-pipeline-impl.md  2026-03-09-tables-cleanup-design.md  2026-03-09-tables-cleanup-impl.md  2026-03-09-tui-configure-impl.md
docs/plans/: 2026-03-09-pipeline-config-design.md  2026-03-09-pipeline-config-impl.md  2026-03-09-standardization-pipeline-design.md  2026-03-09-tui-configure-design.md  2026-04-14-tables-to-toml.md  future-tui-and-reordering.md
docs/specs/: 2026-04-14-tables-to-toml-design.md
docs/superpowers/plans/: 2026-03-09-duckdb-integration.md  2026-03-10-custom-steps.md  2026-03-10-pipeline-refactor.md  2026-03-10-step-reordering.md  2026-03-11-canonical-tables.md  2026-03-11-extract-numbers.md  2026-03-11-step-editor-form.md  2026-03-12-shared-panel.md  2026-03-12-tui-refactor.md  2026-04-19-config-override-redesign.md  2026-05-07-cli-feature-gate.md
docs/superpowers/specs/: 2026-03-09-duckdb-integration-design.md  2026-03-10-custom-steps-design.md  2026-03-10-pipeline-refactor-design.md  2026-03-10-step-reordering-design.md  2026-03-11-canonical-tables-design.md  2026-03-11-extract-numbers-design.md  2026-03-11-step-editor-form-design.md  2026-03-12-shared-panel-design.md  2026-03-12-shared-panel-layout-design.md  2026-03-12-tui-refactor-design.md  2026-04-19-config-override-redesign.md  2026-05-07-cli-feature-gate.md
src/: address.rs  config.rs  duckdb_io.rs  init.rs  lib.rs  main.rs  ops.rs  pattern.rs  pipeline.rs  prepare.rs  step.rs  tui.rs
src/tables/: abbreviations.rs  mod.rs  numbers.rs  rules.rs
src/tui/: meta.rs  mod.rs  panel.rs  tabs.rs  widgets.rs
tests/: config.rs  duckdb_integration.rs  golden.rs
