[package]
name = "addrust"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
fancy-regex = "0.14"
rayon = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
duckdb = { version = "1.4", optional = true }

[features]
duckdb = ["dep:duckdb"]

[dev-dependencies]
tempfile = "3"
