[package]
name = "addrust"
version = "0.1.1"
edition = "2024"
authors = ["EvictionLab", "Sarah Johnson (sj-io)"]
description = "A fast, configurable, table-driven address parser for US addresses"
license = "MIT"
repository = "https://github.com/EvictionLab/addrust"

[dependencies]
regex = "1"
fancy-regex = "0.14"
rayon = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
duckdb = { version = "1.4", optional = true, features = ["bundled"] }

[features]
default = ["duckdb"]
duckdb = ["dep:duckdb"]

[[bin]]
name = "generate-suffixes"
path = "src/bin/generate_suffixes.rs"

[dev-dependencies]
tempfile = "3"
