[package]
name = "addrust"
version = "0.1.2"
edition = "2024"
authors = ["EvictionLab", "Sarah Johnson (sj-io)"]
description = "A fast, configurable, table-driven address parser for US addresses"
license = "MIT"
repository = "https://github.com/EvictionLab/addrust"

[dependencies]
regex = "1"
fancy-regex = "0.14"
rayon = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
duckdb = { version = "1.4", optional = true, features = ["bundled"] }

[features]
default = ["duckdb", "cli", "parallel"]
duckdb = ["dep:duckdb"]
cli = ["dep:clap", "dep:ratatui", "dep:crossterm"]
parallel = ["dep:rayon"]

[[bin]]
name = "addrust"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "generate-suffixes"
path = "src/bin/generate_suffixes.rs"

[dev-dependencies]
tempfile = "3"
